# sando

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  BENCHMARKING_SYSTEM.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  FindGUROBI.cmake  LICENSE  README.md  package.xml  setup.sh
.claude/commands/: cleanup.md
benchmarking/: README_BENCHMARK.md  collision_checker.py  convert_actual_traj_id.ipynb  dynamic_obstacle_benchmark_node.py  dynamic_obstacle_collision_checker.py  generate_latex_table.py  generate_temporal_sfc_ablation_table.py  generate_unknown_dynamic_table.py  local_traj_benchmark.ipynb  make_video_from_bag.ipynb  run_benchmark_suite.py  unc_benchmark_data_analysis.ipynb  unc_benchmark_node.py
config/: sando.yaml  sando_hw_quadrotor.yaml
docker/: Dockerfile  Makefile  sando.sh
include/: timer.hpp
include/hgp/: data_type.hpp  data_utils.hpp  graph_search.hpp  hgp_manager.hpp  hgp_planner.hpp  map_util.hpp  read_map.hpp  termcolor.hpp  utils.hpp
include/sando/: convert_goal_to_cmd_vel.hpp  convert_odom_to_state.hpp  convert_vicon_to_state.hpp  gurobi_solver.hpp  gurobi_solver_utils.hpp  obstacle_tracker_node.hpp  sando.hpp  sando_node.hpp  sando_type.hpp  utils.hpp
include/sim/: exprtk.hpp  gazebo_ros_imu_sensor.hpp
launch/: base_sando.launch.py  convert_goal_to_cmd_vel.launch.py  convert_odom_to_state.launch.py  convert_vicon_to_state.launch.py  dyn_obstacles.launch.py  generate_sfc.yaml  goal_monitor.launch.py  goal_sender.launch.py  local_traj_benchmark.launch.py  local_traj_benchmark.yaml  onboard_sando.launch.py  rviz_only.launch.py  simulator.launch.py  spawn_quadrotor.launch.xml  spawn_quadrotor_with_asus.launch.xml  temporal_layered_corridor_test.launch.py
meshes/obstacles/: model2.dae  model4.dae
rviz/: sando.rviz  sando_px01_hardware.rviz  sando_px03_hardware.rviz  sando_px05_hardware.rviz
scripts/: BENCHMARKING.md  COLLISION_CHECKING.md  analyze_benchmark.py  analyze_dynamic_benchmark.py  analyze_hw_bag.py  bag_record.py  chaser_goal_forwarder.py  check_collisions.py  convert_bag.py  convert_goal_to_cmd_vel.py  convert_odom_to_state.py  convert_vicon_to_state.py  example_benchmark_sweep.sh  fixed_obstacles_publisher.py  generate_random_forest.py  generate_sfc_ablation_table.py  goal_monitor_node.py  goal_relay.py  goal_sender.py  hw_bag_record.py  kill_ros_processes.py  pc_z_filter.py  relay_forever.py  run_all_dynamic_benchmark_with_other_planners.py  run_all_dynamic_benchmarks.sh  run_benchmark.py  run_remaining_dynamic_benchmarks.sh  run_sim.py  rviz_obstacles_node.py  save_obstacles.py
src/hgp/: graph_search.cpp  hgp_manager.cpp  hgp_planner.cpp  utils.cpp
src/sando/: convert_goal_to_cmd_vel.cpp  convert_odom_to_state.cpp  convert_velodyne_to_ros_time.cpp  convert_vicon_to_state.cpp  corridor_generator_node.cpp  fake_sim.cpp  gurobi_solver.cpp  local_traj_benchmark.cpp  obstacle_tracker_node.cpp  odom_to_global_state.cpp  sando.cpp  sando_node.cpp  temporal_layered_corridor_test_node.cpp  utils.cpp  visualize_local_trajs.cpp
src/sim/: dynamic_forest_node.cpp  dynamic_obstacles_world_plugin.cpp  gazebo_ros_imu_sensor.cpp  move_model.cpp
src/tools/: analyze_benchmark.cpp  convert_bag.cpp
urdf/: _d435.gazebo.xacro  _d435.urdf.xacro  _d435i.gazebo.xacro  _d435i.urdf.xacro  _t265.gazebo.xacro  _t265.urdf.xacro  dyn_obstacle1.urdf.xacro  dyn_obstacle_lightweight.urdf.xacro  generic_camera.urdf.xacro  p3at.urdf.xacro  p3at_manual.urdf  pioneer3at_body.urdf.xacro  quadrotor.urdf.xacro  quadrotor_base.urdf.xacro  sonar_sensor.urdf.xacro
urdf/basse_flower/: model.config  model.sdf
urdf/wall1/: model.config  model.sdf
urdf/wall2/: model.sdf
urdf/wall3/: model.config  model.sdf
videos/: claude_code_prompt_manim_dynus2.md
videos/animation/: manim.cfg
videos/animation/scenes/: scene4_spatiotemporal_3d.py
videos/animation/utils/: config.py  corridors.py  trajectory.py
videos/dynus2_animation/scenes/: scene4_spatiotemporal_3d.py
videos/dynus2_animation/utils/: obstacles.py
worlds/: ACL_office.world  ACL_office_with_backpack.world  big_forest.world  big_forest_high_res.world  dynamic_forest.world  easy_forest.world  empty.world  empty_wo_ground.world  finals_systems_prelim2.world  flight_space.world  flight_test_env.world  forest.world  forest0.world  forest2.world  forest3.world  forest3_with_walls.world  hard_forest.world  hospital.world  medium_forest.world  office.world  office_indoor.world  quadruped_easy_forest.world  quadruped_forest3.world  roi_map_test.world  simple_tunnel.world  static_uncertainty_test.world  static_uncertainty_test2.world  static_uncertainty_test3.world  static_uncertainty_test4.world  tunnel.world
worlds/worlds/: forest.world  forest_tagged.world  hill.world  hill_tagged.world  lake.world  lake_tagged.world  park.world  park_tagged.world
