<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sando</name>
  <version>1.0.0</version>
  <description>SANDO: Safe Autonomous Trajectory Planning for Dynamic Unknown Environments</description>
  <maintainer email="kkondo@mit.edu">Kota Kondo</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rclcpp_components</depend>
  <depend>example_interfaces</depend>
  <depend>dynus_interfaces</depend>
  <depend>visualization_msgs</depend>
  <depend>decomp_ros_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>decomp_rviz_plugins</depend>
  <depend>decomp_test_node</depend>
  <depend>std_srvs</depend>
  <depend>pcl_ros</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models" />
  </export>
</package>
